--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,11 @@
 header {
+  display: flex;
   z-index: 0;
   height: 400px;
   width: 100%;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
   background-color: #c7c7c7;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   background-repeat: repeat;
