--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -17,3 +17,65 @@
   border: none;
   border-bottom: 5px solid black;
 }
+
+.tweetContainer{
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bigBody{
+  padding: 20px
+}
+
+.theTweet{
+  border: none;
+  padding: 20px;
+}
+
+.header2{
+  display:flex;
+  justify-content: space-between;
+  font-size: 20px;
+  padding: 20px;
+}
+
+.bottom{
+  display:flex;
+  justify-content: space-between;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+article:hover {
+  transform: scale(1.05, 1);
+  box-shadow: black;
+}
+
+#flag:hover {
+  color:wheat;
+}
+
+#like:hover {
+  color: wheat;
+}
+
+#retweet:hover {
+  color:wheat;
+}
+
+article{
+  border-style:ridge;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+#tweetsContainer{
+  padding-top: 20px;
+}
+
+
+
+
