--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,5 @@
-header {
+.header {
   display: flex;
-  z-index: 0;
   height: 400px;
   width: 100%;
   justify-content: center;
@@ -9,6 +8,7 @@ header {
   background-color: #c7c7c7;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
   background-repeat: repeat;
+  z-index: 0;
 }
 
 .avatar {
