added functions to create new tweets dynamically

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -23,6 +23,8 @@
   align-items: stretch;
   flex-direction: column;
   justify-content: space-between;
+  border: black;
+  border-width: 10px;
 }
 
 .bigBody{
