--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,7 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
 .container {
@@ -29,6 +30,7 @@ body {
   padding-top: 1rem;
   padding-bottom: .5rem;
   margin-bottom: 20px;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
 /*
