--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -18,13 +18,12 @@
   border-bottom: 5px solid black;
 }
 
-.tweetContainer{
+.tweet-Container{
   display: flex;
   align-items: stretch;
   flex-direction: column;
   justify-content: space-between;
-  border: black;
-  border-width: 10px;
+  border:double;
 }
 
 .bigBody{
@@ -47,6 +46,7 @@
   display:flex;
   justify-content: space-between;
   font-size: 20px;
+  padding: 20px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -74,8 +74,13 @@ article{
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
-#tweetsContainer{
+#tweets-Container{
   padding-top: 20px;
+}
+
+.error{
+  color:red;
+  text-decoration-thickness:initial;
 }
 
 
