--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -85,7 +85,7 @@ article{
 
 @media (min-width: 1024px) {
   nav{
-    background-color: #083746;
+    background-color: #4056A1;
   }
   .split{
     display: flex;
