--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,21 +6,20 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 /*
  * Global layout stuff
  */
-
-
-
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
@@ -28,7 +27,7 @@ body {
   width: 90%;
   margin: auto;
   padding-top: 1rem;
-  padding-bottom: .5rem;
+  padding-bottom: 0.5rem;
   margin-bottom: 20px;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
