--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,11 +1,11 @@
 nav {
-  display:flex;
+  display: flex;
   height: 120px;
   width: 100%;
-  background-color: #4056A1;
-  color: #FFFFFF;
+  background-color: #4056a1;
+  color: #ffffff;
   padding-right: 1.5em;
-  padding-left: 1.5em; 
+  padding-left: 1.5em;
   justify-content: space-between;
   align-items: center;
   z-index: 1;
@@ -14,13 +14,13 @@ nav {
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
 }
 
-.title{
+.title {
   font-size: 40px;
-  font-family:'Bungee', sans-serif;
+  font-family: "Bungee", sans-serif;
 }
 
-.element{
+.element {
   display: flex;
   align-items: center;
-  flex-direction: column;  
+  flex-direction: column;
 }
